--- a/configurations/TOI4504/TOI-4504_T057.ini
+++ b/configurations/TOI4504/TOI-4504_T057.ini
@@ -28,7 +28,7 @@ result_dt = 75000            # Real time differences between simulation iteratio
 max_interval_extensions = 5  # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
                              # If no TT has been found max_interval_extensions * dt around the expected interval between 2 iterations
                              # the search for this particular TT will be aborted. (dt comes from the list dts.)
-comment = X055               # You can use this comment for example as diagram title in your result plots
+comment = T057               # You can use this comment for example as diagram title in your result plots
 ;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
@@ -84,12 +84,12 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
                      # times without searching for the precise transit times in the simulated flux
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
-backend = X055_backend.h5
+backend = T057_backend.h5
 ;load_backend = True
-walkers = 8192             # Number of mcmc chains
-burn_in = 300              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+walkers = 32768            # Number of mcmc chains
+burn_in = 100              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 thin_samples = 10          # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 100           # Every chunk_size steps after burn-in phase, results will be saved.
+chunk_size = 30            # Every chunk_size steps after burn-in phase, results will be saved.
 steps = 1e7                # Number of mcmc steps after burn-in phase
 
 moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
