--- a/configurations/TOI4504/TOI-4504_T060.ini
+++ b/configurations/TOI4504/TOI-4504_T060.ini
@@ -28,8 +28,8 @@ result_dt = 75000            # Real time differences between simulation iteratio
 max_interval_extensions = 5  # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
                              # If no TT has been found max_interval_extensions * dt around the expected interval between 2 iterations
                              # the search for this particular TT will be aborted. (dt comes from the list dts.)
-comment = debug               # You can use this comment for example as diagram title in your result plots
-verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
+comment = T060               # You can use this comment for example as diagram title in your result plots
+;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
@@ -75,7 +75,7 @@ flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
 
-;tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
+tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/simulations/tt_sim.csv # <string> file with measured transit times (real data)
 tt_weight = 1  # weighting tt residuals against rv and flux residuals
 eclipsers_names = TOI4504c, TOI4504d  # only primary transits by these bodies are relevant when fitting for TT
@@ -84,10 +84,12 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
                      # times without searching for the precise transit times in the simulated flux
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
-;backend = X055_backend.h5
+backend = T060_backend.h5
 ;load_backend = True
-walkers = 32             # Number of mcmc chains
-burn_in = 1              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+walkers = 128              # Number of mcmc chains
+burn_in = 5000             # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+thin_samples = 100         # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+chunk_size = 2500          # Every chunk_size steps after burn-in phase, results will be saved.
 steps = 1e7                # Number of mcmc steps after burn-in phase
 
 moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
@@ -107,8 +109,6 @@ moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses
 # KDEMove: Use MANY walkers!
 # GaussianMove: braucht covarianz als Argument?!?!
 
-thin_samples = 1            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 10             # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
@@ -190,14 +190,14 @@ body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      2.182 * m_jup,      2.0 * m_jup,      2.3 * m_jup,       0.001 * m_jup
+mass =      2.1750 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.00001 * m_jup
 radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
-e =         0.2476,             0.23,             0.26,              0.00001
-i =         91.13,               88.8,             89.5,              0.5
-P =         41.7698 * day,      41.6 * day,       41.9 * day,        0.001 * day
-Omega =     -0.41,              -3,               3,                 0.01
-omega =     279.26,             270,              290,               0.01
-ma =        -28.13,             -40,              -20,               0.01
+e =         0.24779,            0.00,             0.50,              0.00001
+i =         91.15,            # 91.0,             91.5,              0.5
+P =         41.7721 * day,      40.0 * day,       43.0 * day,        0.00001 * day
+Omega =     -0.123,             -10,              10,                0.00001
+omega =     278.84,             100,              460,               0.00001
+ma =        -27.19,             -220,             140,               0.00001
 
 
 [TOI4504c]
@@ -205,14 +205,14 @@ body_type = planet
 primary =   TOI-4504
 color =     0.99, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      2.647 * m_jup,      2.5 * m_jup,      2.8 * m_jup,       0.001 * m_jup
+mass =      2.6452 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.00001 * m_jup
 radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
-e =         0.03897,            0.03,             0.05,              0.00001
-i =         89.69,              89.25,            90.0,              0.2
-P =         80.7914 * day,      80.4 * day,       81.20 * day,       0.001 * day
+e =         0.03936,            0.00,             0.50,              0.00001
+i =         89.69,            # 89.25,            90.0,              0.2
+P =         80.7873 * day,      80.00 * day,      86.00 * day,       0.00001 * day
 Omega =     0.8,              #
-omega =     -61.62,             -70,              -50,               0.01
-ma =        143.17,             130,              155,               0.01
+omega =     -62.20,             -230,             130,               0.00001
+ma =        143.76,             -50,              310,               0.00001
 
 
 ;[TOI4504e]
