--- a/configurations/TOI4504/TOI-4504_T060.ini
+++ b/configurations/TOI4504/TOI-4504_T060.ini
@@ -87,9 +87,9 @@ fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the
 backend = T060_backend.h5
 ;load_backend = True
 walkers = 128              # Number of mcmc chains
-burn_in = 5000             # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+burn_in = 1#5000             # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 thin_samples = 100         # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 2500          # Every chunk_size steps after burn-in phase, results will be saved.
+chunk_size = 100#2500          # Every chunk_size steps after burn-in phase, results will be saved.
 steps = 1e7                # Number of mcmc steps after burn-in phase
 
 moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
