--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -33,8 +33,9 @@ verbose = True              # If False (which is default), only error messages w
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
+single_run = True            # No fitting. Just a single run of the simulation.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 75000                  # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
+dt = 75000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
@@ -75,7 +76,7 @@ flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
 
-;tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
+tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/simulations/tt_sim.csv # <string> file with measured transit times (real data)
 tt_weight = 1  # weighting tt residuals against rv and flux residuals
 eclipsers_names = TOI4504c, TOI4504d  # only primary transits by these bodies are relevant when fitting for TT
@@ -190,14 +191,14 @@ body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      2.182 * m_jup,      2.0 * m_jup,      2.3 * m_jup,       0.001 * m_jup
+mass =      2.1750 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.00001 * m_jup
 radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
-e =         0.2476,             0.23,             0.26,              0.00001
-i =         91.13,               88.8,             89.5,              0.5
-P =         41.7698 * day,      41.6 * day,       41.9 * day,        0.001 * day
-Omega =     -0.41,              -3,               3,                 0.01
-omega =     279.26,             270,              290,               0.01
-ma =        -28.13,             -40,              -20,               0.01
+e =         0.24779,            0.00,             0.50,              0.00001
+i =         91.22,            # 91.0,             91.5,              0.5
+P =         41.7721 * day,      40.0 * day,       43.0 * day,        0.00001 * day
+Omega =     -0.123,             -10,              10,                0.00001
+omega =     278.84,             100,              460,               0.00001
+ma =        -27.19,             -220,             140,               0.00001
 
 
 [TOI4504c]
@@ -205,14 +206,14 @@ body_type = planet
 primary =   TOI-4504
 color =     0.99, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      2.647 * m_jup,      2.5 * m_jup,      2.8 * m_jup,       0.001 * m_jup
+mass =      2.6452 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.00001 * m_jup
 radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
-e =         0.03897,            0.03,             0.05,              0.00001
-i =         89.69,              89.25,            90.0,              0.2
-P =         80.7914 * day,      80.4 * day,       81.20 * day,       0.001 * day
+e =         0.03936,            0.00,             0.50,              0.00001
+i =         89.69,            # 89.25,            90.0,              0.2
+P =         80.7873 * day,      80.00 * day,      86.00 * day,       0.00001 * day
 Omega =     0.8,              #
-omega =     -61.62,             -70,              -50,               0.01
-ma =        143.17,             130,              155,               0.01
+omega =     -62.20,             -230,             130,               0.00001
+ma =        143.76,             -50,              310,               0.00001
 
 
 ;[TOI4504e]
