--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -29,11 +29,12 @@ max_interval_extensions = 5  # In unstable systems or when using a very large dt
                              # If no TT has been found max_interval_extensions * dt around the expected interval between 2 iterations
                              # the search for this particular TT will be aborted. (dt comes from the list dts.)
 comment = debug               # You can use this comment for example as diagram title in your result plots
-verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
+verbose = True              # If False, only error messages will be printed to the console. Useful when running MCMC. Default: False
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
-single_run = True            # No fitting. Just a single run of the simulation.
+;single_run = True            # No fitting. Just a single run of the simulation. Default: False
+results_only = True          # No simulating, no fitting. Just read some results and generate reports. Default: False
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
 dt = 75000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
@@ -66,12 +67,11 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 ;flux_file = ../data/TOI-4504/TOI4504_b_transits_bin1200_27til94.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
-;guifit = True                # Find the best fitting parameters by hand
-;lmfit = True                 # True for LMfit, False for MCMC
+;guifit = True                # True for interactive fit via GUI. Default: False
+;lmfit = True                 # True for LMfit, False for MCMC. Default: False
 lmfit_method = powell
 ;lmfit_method = differential_evolution
 ;lmfit_method = nelder
-;guifit = True                # True for interactive fit via GUI, False for MCMC
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
@@ -194,7 +194,7 @@ color =     0.01, 0.99, 0.01
 mass =      2.1750 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.00001 * m_jup
 radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
 e =         0.24779,            0.00,             0.50,              0.00001
-i =         91.22,            # 91.0,             91.5,              0.5
+i =         91.40,            # 91.0,             91.5,              0.5
 P =         41.7721 * day,      40.0 * day,       43.0 * day,        0.00001 * day
 Omega =     -0.123,             -10,              10,                0.00001
 omega =     278.84,             100,              460,               0.00001
@@ -210,7 +210,7 @@ mass =      2.6452 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.00001 * m
 radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
 e =         0.03936,            0.00,             0.50,              0.00001
 i =         89.69,            # 89.25,            90.0,              0.2
-P =         80.7873 * day,      80.00 * day,      86.00 * day,       0.00001 * day
+P =         90.7873 * day,      80.00 * day,      86.00 * day,       0.00001 * day
 Omega =     0.8,              #
 omega =     -62.20,             -230,             130,               0.00001
 ma =        143.76,             -50,              310,               0.00001
