--- a/configurations/TOI4504/TOI-4504_Vitkova.ini
+++ b/configurations/TOI4504/TOI-4504_Vitkova.ini
@@ -33,7 +33,8 @@ verbose = True              # If False (which is default), only error messages w
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
-single_run = True            # No fitting. Just a single run of the simulation.
+;single_run = True            # No fitting. Just a single run of the simulation.
+results_only = True          # No simulating, no fitting. Just read some results and generate reports. Default: False
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
 dt = 75000                  # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
@@ -76,8 +77,8 @@ flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
 
-;tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
-tt_file = ../data/TOI-4504/tt_vitkova_prognose.csv # <string> file with measured transit times (real data)
+tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
+;tt_file = ../data/TOI-4504/tt_vitkova_prognose.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/simulations/tt_sim.csv # <string> file with measured transit times (real data)
 tt_weight = 1  # weighting tt residuals against rv and flux residuals
 eclipsers_names = TOI4504c, TOI4504d  # only primary transits by these bodies are relevant when fitting for TT
