--- a/configurations/TOI4504/1run.ini
+++ b/configurations/TOI4504/1run.ini
@@ -34,7 +34,7 @@ verbose = True              # If False, only error messages will be printed to t
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 single_run = True            # No fitting. Just a single run of the simulation. Default: False
-results_only = True          # No simulating, no fitting. Just read some results and generate reports. Default: False
+;results_only = True          # No simulating, no fitting. Just read some results and generate reports. Default: False
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
 dt = 75000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
@@ -194,7 +194,8 @@ color =     0.01, 0.99, 0.01
 mass =      2.12663 * m_jup,     2.10 * m_jup,     2.25 * m_jup,      0.001 * m_jup
 radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
 e =         0.25036,            0.242,            0.256,             0.00001
-i =         91.15,            # 91.00,            91.25,             0.01
+i =         89.09,            # 91.00,            91.25,             0.01
+;i =         91.15,            # 91.00,            91.25,             0.01
 P =         41.78875 * day,     41.74 * day,      41.81 * day,       0.001 * day
 Omega =     0.25,               -2,               2.5,               0.01
 omega =     275.58,             273,              285,               0.01
