--- a/configurations/TOI4504/TOI-4504_T062.ini
+++ b/configurations/TOI4504/TOI-4504_T062.ini
@@ -66,7 +66,7 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 ;guifit = True                # Find the best fitting parameters by hand
-lmfit = True                 # True for LMfit, False for MCMC
+;lmfit = True                 # True for LMfit, False for MCMC
 lmfit_method = powell
 ;lmfit_method = differential_evolution
 ;lmfit_method = nelder
@@ -87,9 +87,9 @@ fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the
 ;backend = T058_backend.h5
 ;load_backend = True
 walkers = 1024             # Number of mcmc chains
-burn_in = 200              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
-thin_samples = 10          # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 200           # Every chunk_size steps after burn-in phase, results will be saved.
+burn_in = 4000             # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+thin_samples = 40          # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+chunk_size = 400           # Every chunk_size steps after burn-in phase, results will be saved.
 steps = 1e7                # Number of mcmc steps after burn-in phase
 
 moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
@@ -190,14 +190,14 @@ body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      2.1278 * m_jup,     2.10 * m_jup,     2.25 * m_jup,      0.04 * m_jup
+mass =      2.1278 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.04 * m_jup
 radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
-e =         0.2498,             0.242,            0.256,             0.005
+e =         0.2498,             0.0,              0.5,               0.005
 i =         91.15,            # 91.00,            91.25,             0.01
-P =         41.7878 * day,      41.77 * day,      41.81 * day,       0.03 * day
-Omega =     0.24,               -2,               2.5,               2.7
-omega =     275.80,             273,              285,               4.0
-ma =        -20.46,             -40,              -15,               8.0
+P =         41.7878 * day,      40 * day,         43 * day,          0.03 * day
+Omega =     0.24,               -10,              10,                2.7
+omega =     275.80,             100,              460,               4.0
+ma =        -20.46,             -200,             160,               8.0
 
 
 [TOI4504c]
@@ -205,11 +205,11 @@ body_type = planet
 primary =   TOI-4504
 color =     0.99, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      2.6315 * m_jup,     2.60 * m_jup,     2.70 * m_jup,      0.025 * m_jup
+mass =      2.6315 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.025 * m_jup
 radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
-e =         0.04217,            0.033,            0.046,             0.0035
+e =         0.04217,            0.0,              0.5,               0.0035
 i =         89.69,            # 89.25,            90.0,              0.2
-P =         80.7610 * day,      80.4 * day,       81.20 * day,       0.07 * day
+P =         80.7610 * day,      80.0 * day,       84 * day,          0.07 * day
 Omega =     0.8,              #
-omega =     -66.18,             -70,              -55,               6.0
-ma =        147.88,             130,              155,               6.0
+omega =     -66.18,             -250,             110,               6.0
+ma =        147.88,             -30,              330,               6.0
