--- a/configurations/TOI4504/TOI-4504_Vitkova.ini
+++ b/configurations/TOI4504/TOI-4504_Vitkova.ini
@@ -33,8 +33,8 @@ verbose = True              # If False (which is default), only error messages w
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
-single_run = True            # No fitting. Just a single run of the simulation.
-;results_only = True          # No simulating, no fitting. Just read some results and generate reports. Default: False
+;single_run = True            # No fitting. Just a single run of the simulation.
+results_only = True          # No simulating, no fitting. Just read some results and generate reports. Default: False
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
 dt = 75000                  # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
