--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -33,8 +33,8 @@ verbose = True              # If False, only error messages will be printed to t
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
-;single_run = True            # No fitting. Just a single run of the simulation. Default: False
-results_only = True          # No simulating, no fitting. Just read some results and generate reports. Default: False
+single_run = True            # No fitting. Just a single run of the simulation. Default: False
+;results_only = True          # No simulating, no fitting. Just read some results and generate reports. Default: False
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
 dt = 75000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
@@ -73,8 +73,7 @@ lmfit_method = powell
 ;lmfit_method = differential_evolution
 ;lmfit_method = nelder
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
-;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
-rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
+rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 
 tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/simulations/tt_sim.csv # <string> file with measured transit times (real data)
@@ -191,14 +190,14 @@ body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      2.1750 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.00001 * m_jup
+mass =      2.1278 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.04 * m_jup
 radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
-e =         0.24779,            0.00,             0.50,              0.00001
-i =         91.40,            # 91.0,             91.5,              0.5
-P =         41.7721 * day,      40.0 * day,       43.0 * day,        0.00001 * day
-Omega =     -0.123,             -10,              10,                0.00001
-omega =     278.84,             100,              460,               0.00001
-ma =        -27.19,             -220,             140,               0.00001
+e =         0.2498,             0.0,              0.5,               0.005
+i =         91.15,            # 91.00,            91.25,             0.01
+P =         41.7878 * day,      40 * day,         43 * day,          0.03 * day
+Omega =     0.24,               -10,              10,                2.7
+omega =     275.80,             100,              460,               4.0
+ma =        -20.46,             -200,             160,               8.0
 
 
 [TOI4504c]
@@ -206,26 +205,11 @@ body_type = planet
 primary =   TOI-4504
 color =     0.99, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      2.6452 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.00001 * m_jup
+mass =      2.6315 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.025 * m_jup
 radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
-e =         0.03936,            0.00,             0.50,              0.00001
+e =         0.04217,            0.0,              0.5,               0.0035
 i =         89.69,            # 89.25,            90.0,              0.2
-P =         90.7873 * day,      80.00 * day,      86.00 * day,       0.00001 * day
+P =         80.7610 * day,      80.0 * day,       84 * day,          0.07 * day
 Omega =     0.8,              #
-omega =     -62.20,             -230,             130,               0.00001
-ma =        143.76,             -50,              310,               0.00001
-
-
-;[TOI4504e]
-;body_type = planet
-;primary =   TOI-4504
-;color =     0.99, 0.99, 0.01
-;           value               lower bound       upper bound        sigma
-;mass =      3 * m_jup,          0.1 * m_jup,      80.0 * m_jup,      10 * m_jup
-;radius =    1 * r_jup,        #
-;e =         0.15,               0.0,              0.30,              0.1
-;i =         84,                 80,               88.0,              3
-;P =         170 * day,          9 * day,          700 * day,         120 * day
-;Omega =     0,                  -15,              15,                5
-;omega =     180,                0,                359.99,            180
-;ma =        180,                0,                359.99,            180
+omega =     -66.18,             -250,             110,               6.0
+ma =        147.88,             -30,              330,               6.0
