--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -33,6 +33,11 @@ verbose = True              # If False, only error messages will be printed to t
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
+;action = results_only
+;action = single_run
+;action = lmfit
+action = guifit
+;action = mcmc
 single_run = True            # No fitting. Just a single run of the simulation. Default: False
 ;results_only = True          # No simulating, no fitting. Just read some results and generate reports. Default: False
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
@@ -74,7 +79,7 @@ lmfit_method = powell
 ;lmfit_method = nelder
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
 rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
-
+rv_body = TOI4504
 tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/simulations/tt_sim.csv # <string> file with measured transit times (real data)
 tt_weight = 1  # weighting tt residuals against rv and flux residuals
