--- a/configurations/MyFirstConfigFile.ini
+++ b/configurations/MyFirstConfigFile.ini
@@ -60,8 +60,8 @@ figure_width = 16            # <int>   width of figure which contains all plots 
 figure_height = 8            # <int>   height of figure which contains all plots and animations
 xlim = 1.25                  # <float> left and right view both show x-values between -Xlim and + Xlim
 ylim = 1.0                   # <float> left and right view both show y-values between -Ylim and + Ylim
-red_dot_height = 1/13        # <float> relative height of red dot in light curve plot
-red_dot_width = 1/200        # <float> relative width of red dot in light curve plot
+flux_dot_height = 1/13        # <float> relative height of red dot in light curve plot
+flux_dot_width = 1/200        # <float> relative width of red dot in light curve plot
 
 
 # all following sections define physical bodies in the simulation
