--- a/configurations/TOI4504/TOI-4504.ini
+++ b/configurations/TOI4504/TOI-4504.ini
@@ -110,8 +110,8 @@ figure_width = 16            # <int>   width of figure which contains all plots 
 figure_height = 8            # <int>   height of figure which contains all plots and animations
 xlim = 1.25                  # <float> left and right view both show x-values between -Xlim and + Xlim
 ylim = 1.0                   # <float> left and right view both show y-values between -Ylim and + Ylim
-red_dot_height = 1/20        # <float> height of red dot in light curve plot relative to height of y-axis
-red_dot_width = 1/235        # <float> width of red dot in light curve plot relative to width of x-axis
+flux_dot_height = 1/20        # <float> height of red dot in light curve plot relative to height of y-axis
+flux_dot_width = 1/235        # <float> width of red dot in light curve plot relative to width of x-axis
 
 
 [TOI-4504]
