--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -33,13 +33,11 @@ verbose = True              # If False, only error messages will be printed to t
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
-;action = results_only
-;action = single_run
+;action = results_only        # No simulating, no fitting. Just read some results and generate reports.
+action = single_run          # No fitting. Just a single run of the simulation.
 ;action = lmfit
-action = guifit
+;action = guifit
 ;action = mcmc
-single_run = True            # No fitting. Just a single run of the simulation. Default: False
-;results_only = True          # No simulating, no fitting. Just read some results and generate reports. Default: False
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
 dt = 75000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
@@ -126,8 +124,8 @@ scale = {"mass": 1/m_jup, "radius": 1/r_jup, "e": 1, "i": rad2deg, "P": 1/day, "
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
                              # Comment out the first parameter to prevent video generation.
-;video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
-frames = 60                  # <int> number of frames of video. Proportional to Curvesimulator's run time
+video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
+frames = 20                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
