--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -46,7 +46,8 @@ dt = 75000                   # [s] <float> real time difference between simulati
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
 starts = [2458400]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
-ends =   [2460920]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+ends =   [2458485]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+;ends =   [2460920]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
 dts =    [75000]             # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
