--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -22,7 +22,7 @@ year = day * 365.24219       # [s] Approximately one tropical earth year in seco
 rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-result_file = ../results/TOI-4504_debug.json  # <string> simulation results like transit times are saved in this file
+result_file = TOI-4504_debug.json  # <string> simulation results like transit times are saved in this file
 result_dt = 75000            # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 max_interval_extensions = 5  # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
@@ -34,6 +34,7 @@ verbose = True              # If False, only error messages will be printed to t
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 ;action = results_only        # No simulating, no fitting. Just read some results and generate reports.
+results_directory = ../results/debug  # All results are saved in the next available numbered subdirectory
 action = single_run          # No fitting. Just a single run of the simulation.
 ;action = lmfit
 ;action = guifit
@@ -86,8 +87,6 @@ eclipsers_names = TOI4504c, TOI4504d  # only primary transits by these bodies ar
 eclipsees_names = TOI4504              # only transits eclipsing these bodies are relevant when fitting for TT
 target_flux = 0.985  # Expected normalized flux during transits. Used for a simplified fitting of the transits
                      # times without searching for the precise transit times in the simulated flux
-
-fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
 ;backend = X055_backend.h5
 ;load_backend = True
 walkers = 32             # Number of mcmc chains
@@ -156,10 +155,10 @@ figure_width = 16            # <int>   width of figure which contains all plots 
 figure_height = 8            # <int>   height of figure which contains all plots and animations
 xlim = 1.25                  # <float> left and right view both show x-values between -Xlim and + Xlim
 ylim = 1.0                   # <float> left and right view both show y-values between -Ylim and + Ylim
-flux_dot_height = 1/20       # <float> height of red dot in light curve plot relative to height of y-axis
-flux_dot_width = 1/235       # <float> width of red dot in light curve plot relative to width of x-axis
-rv_dot_height = 1/20         # <float> height of red dot in light curve plot relative to height of y-axis
-rv_dot_width = 1/235         # <float> width of red dot in light curve plot relative to width of x-axis
+flux_dot_height = 1/17       # <float> height of red dot in light curve plot relative to height of y-axis
+flux_dot_width = 1/335       # <float> width of red dot in light curve plot relative to width of x-axis
+rv_dot_height = 1/17         # <float> height of red dot in light curve plot relative to height of y-axis
+rv_dot_width = 1/335         # <float> width of red dot in light curve plot relative to width of x-axis
 
 
 [TOI4504]
