--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -66,7 +66,7 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
-                             # Comment out the first parameter if you do not want to fit the simulation to real data
+free_parameters = 13         # Number of free parameters in the fitting model. Relevant for calculating p-value from Chi squared.
 ;flux_file = ../data/TOI-4504/TOI4504_transits_sm0_3til94.csv  # <string> file with flux measurements (real data)
 ;flux_file = ../data/TOI-4504/TOI4504_b_transits_27til94.csv  # <string> file with flux measurements (real data)
 ;flux_file = ../data/TOI-4504/TOI4504_b_transits_bin1200_27til94.csv  # <string> file with flux measurements (real data)
