--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -67,7 +67,7 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
 free_parameters = 13         # Number of free parameters in the fitting model. Relevant for calculating p-value from Chi squared.
-;flux_file = ../data/TOI-4504/TOI4504_transits_sm0_3til94.csv  # <string> file with flux measurements (real data)
+flux_file = ../data/TOI-4504/TOI4504_transits_sm0_3til95.csv  # <string> file with flux measurements (real data)
 ;flux_file = ../data/TOI-4504/TOI4504_b_transits_27til94.csv  # <string> file with flux measurements (real data)
 ;flux_file = ../data/TOI-4504/TOI4504_b_transits_bin1200_27til94.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
@@ -91,7 +91,7 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
 ;load_backend = True
 walkers = 32             # Number of mcmc chains
 burn_in = 1              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
-steps = 1e7                # Number of mcmc steps after burn-in phase
+steps = 1e7              # Number of mcmc steps after burn-in phase
 
 moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
 ;moves =  (emcee.moves.StretchMove(a=2.0)     )
