--- a/configurations/TOI4504/TOI-4504_T057.ini
+++ b/configurations/TOI4504/TOI-4504_T057.ini
@@ -33,6 +33,8 @@ comment = T057               # You can use this comment for example as diagram t
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
+results_directory = ../results/debug  # All results are saved in the next available numbered subdirectory
+action = mcmc
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
 dt = 75000                  # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
@@ -74,6 +76,7 @@ lmfit_method = powell
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
+rv_body = TOI4504
 
 tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/simulations/tt_sim.csv # <string> file with measured transit times (real data)
@@ -86,10 +89,10 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
 backend = T057_backend.h5
 ;load_backend = True
-walkers = 32768            # Number of mcmc chains
-burn_in = 100              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
-thin_samples = 10          # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 30            # Every chunk_size steps after burn-in phase, results will be saved.
+walkers = 32            # Number of mcmc chains
+burn_in = 1              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+thin_samples = 1          # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+chunk_size = 10            # Every chunk_size steps after burn-in phase, results will be saved.
 steps = 1e7                # Number of mcmc steps after burn-in phase
 
 moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
