--- a/configurations/TOI4504/TOI-4504_064.ini
+++ b/configurations/TOI4504/TOI-4504_064.ini
@@ -35,10 +35,10 @@ comment = debug               # You can use this comment for example as diagram 
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 ;action = results_only        # No simulating, no fitting. Just read some results and generate reports.
 results_directory = ../results/debug  # All results are saved in the next available numbered subdirectory
-;action = single_run          # No fitting. Just a single run of the simulation.
+action = single_run          # No fitting. Just a single run of the simulation.
 ;action = lmfit
 ;action = guifit
-action = mcmc
+;action = mcmc
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
 dt = 75000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
@@ -78,9 +78,9 @@ lmfit_method = powell
 ;lmfit_method = differential_evolution
 ;lmfit_method = nelder
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
-;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
+rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_body = TOI4504
-;tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
+tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/simulations/tt_sim.csv # <string> file with measured transit times (real data)
 tt_weight = 1  # weighting tt residuals against rv and flux residuals
 eclipsers_names = TOI4504c, TOI4504d  # only primary transits by these bodies are relevant when fitting for TT
@@ -196,9 +196,9 @@ primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
 mass =      2.1278 * m_jup,   # 1.0 * m_jup,      5.0 * m_jup,       0.04 * m_jup
-radius =    1.012 * r_jup,      0.2 * r_jup,      4.0 * r_jup,       0.5 * r_jup
+radius =    0.92898 * r_jup,    0.2 * r_jup,      4.0 * r_jup,       0.5 * r_jup
 e =         0.2498,           # 0.0,              0.5,               0.005
-i =         91.09,              90.00,            92.0,              0.3
+i =         91.0635,            90.00,            92.0,              0.3
 P =         41.7878 * day,    # 40 * day,         43 * day,          0.03 * day
 Omega =     0.24,             # -10,              10,                2.7
 omega =     275.80,           # 100,              460,               4.0
@@ -211,9 +211,9 @@ primary =   TOI-4504
 color =     0.99, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
 mass =      2.6315 * m_jup,   # 1.0 * m_jup,      5.0 * m_jup,       0.025 * m_jup
-radius =    0.9897 * r_jup,     0.5 * r_jup,      2.0 * r_jup,       0.2 * r_jup
+radius =    1.04390 * r_jup,    0.5 * r_jup,      2.0 * r_jup,       0.2 * r_jup
 e =         0.04217,          # 0.0,              0.5,               0.0035
-i =         89.69,              89.25,            90.0,              0.3
+i =         89.5945,            89.25,            90.0,              0.3
 P =         80.7610 * day,    # 80.0 * day,       84 * day,          0.07 * day
 Omega =     0.8,              #
 omega =     -66.18,           # -250,             110,               6.0
