--- a/configurations/TOI4504/TOI-4504_065F.ini
+++ b/configurations/TOI4504/TOI-4504_065F.ini
@@ -35,10 +35,10 @@ comment = debug               # You can use this comment for example as diagram 
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 ;action = results_only        # No simulating, no fitting. Just read some results and generate reports.
 results_directory = ../results/debug  # All results are saved in the next available numbered subdirectory
-action = single_run          # No fitting. Just a single run of the simulation.
+;action = single_run          # No fitting. Just a single run of the simulation.
 ;action = lmfit
 ;action = guifit
-;action = mcmc
+action = mcmc
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
 dt = 75000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
