--- a/configurations/TOI4504/TOI-4504_065F.ini
+++ b/configurations/TOI4504/TOI-4504_065F.ini
@@ -78,9 +78,9 @@ lmfit_method = powell
 ;lmfit_method = differential_evolution
 ;lmfit_method = nelder
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
-rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
+;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_body = TOI4504
-tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
+;tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/simulations/tt_sim.csv # <string> file with measured transit times (real data)
 tt_weight = 1  # weighting tt residuals against rv and flux residuals
 eclipsers_names = TOI4504c, TOI4504d  # only primary transits by these bodies are relevant when fitting for TT
