--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -36,8 +36,8 @@ flux_data_directory = ../data/TOI-4504/fluxdata
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 ;action = results_only        # No simulating, no fitting. Just read some results and generate reports.
 results_directory = ../results/debug  # All results are saved in the next available numbered subdirectory
-action = get_tess_data       # Download observed flux
-;action = process_tess_data   # Normalize observed flux and extract flux during (and around) transits
+;action = get_tess_data       # Download observed flux
+action = process_tess_data   # Normalize observed flux and extract flux during (and around) transits
 ;action = single_run          # No fitting. Just a single run of the simulation.
 ;action = mcmc
 ;action = lmfit
@@ -84,8 +84,10 @@ lmfit_method = powell
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_body = TOI4504
+
 tt_file = ../data/TOI-4504/tt_debug.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
+
 tt_padding = 0.225  # [days] x-axis (time) in flux plots of single transits goes from TT - tt_padding til TT + tt_padding, default 0.3
 flux_plots_top = 1.01  # y-axis top in normalized flux plots, default 1.015
 flux_plots_bottom = 0.975  # y-axis bottom in normalized flux plots, default 0.97
